# hepia

001 - Connect 4/: ITIs_Guarino_Sergio_TP1.c
002 - Perpetual calendar/: ITIs_Guarino_Sergio_TP2.c
003 - Image transformation/: ITIs_Guarino_Sergio_TP3.c  lesEs.c
004 - Morse code decryptor with binary tree/: EX14.1_Guarino_Sergio.c  EX14.2_Guarino_Sergio.c  Gestion_fichier_morse.c  test printf.c
005 - Android NFC app (group project)/oc-rfid-master/: README.md  local.properties  settings.gradle
006 - Hacking and pentesting/: proxy2.go  proxy3.go
007 - Sound pollution tracker (group project)/: Rapport.docx  dyn.py
007 - Sound pollution tracker (group project)/AMSsonore_WEB/: Login.php  index.php  map.php  verify.php
007 - Sound pollution tracker (group project)/Code Raspberry/: gps.py  lora.py  main.py  (+1 more)
008 - Gamepad simulator/: README.md  mypy.ini  pyproject.toml
008 - Gamepad simulator/data/: README.md  angles.txt
008 - Gamepad simulator/labo2/: gamepad.py
008 - Gamepad simulator/tests/: test_labo2.py
009 - Optical Character Recognition/: README.md  pyproject.toml
009 - Optical Character Recognition/labo3/: ai.py  server.py  trained_network.h5
009 - Optical Character Recognition/tests/: test_labo3.py
009 - Optical Character Recognition/www/: index.html
009 - Optical Character Recognition/www/js/: canvas.js
009 - Optical Character Recognition/www/style/: style.css
011 - Virsh VM live migration/: README.md
012 - Network configuration with Ansible/: README.md  hosts  playbook.yml
013 - Bachelor Thesis Project/: LICENSE  README.md
(+62 files in other folders)
