[tool.poetry]
name = "Labo2"
version = "0.1.0"
description = ""
authors = ["sergio.guarino <sergio.guarino@etu.hesge.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.1"
numpy = "^1.20.2"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
